--- a/css/design.css
+++ b/css/design.css
@@ -205,12 +205,19 @@ section {
     padding-bottom: 0;
 }
 
-.card-price button {
+.add-to-cart {
+    position: relative;
+    bottom: 0;
     width: 100px;
     background-color: #000;
     padding: 5px;
     color: #fff;
     border-radius: 5px;
+}
+
+.add-to-cart:hover {
+    cursor:pointer;
+    color:rgb(255, 204, 0);
 }
 
 .card-price ul li:not(:last-child) {
